2021-09-22  Fujii Hironori  <Hironori.Fujii@sony.com>

        [Win][MSVC] REGRESSION(r282860): ClipboardItemBindingsDataSource.cpp(147): error C2955: 'WTF::Ref': use of class template requires template argument list
        https://bugs.webkit.org/show_bug.cgi?id=230599

        Unreviewed build fix.

        * Modules/async-clipboard/ClipboardItemBindingsDataSource.cpp:
        (WebCore::ClipboardItemBindingsDataSource::collectDataForWriting):
        Conditioned out the ASSERT_UNUSED for MSVC.

2021-09-21  Jean-Yves Avenard  <jya@apple.com>

        Use SharedMemory for transferring appended buffers from SourceBuffer to the GPU process
        https://bugs.webkit.org/show_bug.cgi?id=230329
        rdar://problem/83291495

        Use SharedBuffer instead of Vector to pass data to the SourceBuffer's related
        classes (SourceBuffer, SourceBufferPrivate and SourceBufferParser).
        Modify SourceBufferParserWebM to never perform memory allocation and copy
        of the original data content. Instead, we use CMBlockBuffer objects that retain the
        backing SharedBuffer and use offsets inside this SharedBuffer to reference the data.
        SourceBufferParserAVFObjC requires little modification as a NSData can wrap a SharedBuffer.

        Reviewed by Jer Noble.

        There should be no change from an observable standpoint other than the GPU memory usage
        being drastically reduced (from 700MB when watching a 4K/60fps YouTube video to just over 200MB
        on an iMac Pro (which only has software VP9 decoding), 25MB vs 360MB on an iPad)
        Existing tests are fully exercising this new code.

        * Modules/mediasource/SourceBuffer.cpp: Simplify logic around m_pendingAppendData member.
        Only one appendBuffer operation can be pending at any given time otherwise appendBuffer
        will throw an exception; as such, there's no need to append the data to a vector: "there can
        be only one".